# docs/openapi.yaml
@@ -45,10 +45,117 @@
                     }
                 }
             }
+        },
+        "/api/v1/like": {
+            "post": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Like",
+                "description": "Add like",
+                "operationId": "like_api_v1_like_post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LikeRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/dislike": {
+            "post": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Dislike",
+                "description": "Add dislike",
+                "operationId": "dislike_api_v1_dislike_post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/DislikeRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "DislikeRequest": {
+                "title": "DislikeRequest",
+                "required": [
+                    "movie_id",
+                    "user_id"
+                ],
+                "type": "object",
+                "properties": {
+                    "_id": {
+                        "title": " Id",
+                        "type": "string",
+                        "format": "uuid",
+                        "default": "b17d77a8-7814-4bc6-bb84-bca28a6d9f62"
+                    },
+                    "movie_id": {
+                        "title": "Movie Id",
+                        "type": "string",
+                        "format": "uuid"
+                    },
+                    "user_id": {
+                        "title": "User Id",
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                },
+                "description": "Dislike request."
+            },
             "HTTPValidationError": {
                 "title": "HTTPValidationError",
                 "type": "object",
@@ -61,6 +168,33 @@
                         }
                     }
                 }
+            },
+            "LikeRequest": {
+                "title": "LikeRequest",
+                "required": [
+                    "movie_id",
+                    "user_id"
+                ],
+                "type": "object",
+                "properties": {
+                    "_id": {
+                        "title": " Id",
+                        "type": "string",
+                        "format": "uuid",
+                        "default": "b17d77a8-7814-4bc6-bb84-bca28a6d9f62"
+                    },
+                    "movie_id": {
+                        "title": "Movie Id",
+                        "type": "string",
+                        "format": "uuid"
+                    },
+                    "user_id": {
+                        "title": "User Id",
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                },
+                "description": "Like request."
             },
             "ValidationError": {
                 "title": "ValidationError",
