# ugc/src/models/__init__.py
@@ -1,3 +1,5 @@
+from .likes import LikeRequest, DislikeRequest
+from .mixin import UUIDMixin
 from .viev_progress import ViewProgressDto, ViewProgressRequest
 
-__all__ = ('ViewProgressDto', 'ViewProgressRequest')
+__all__ = ('LikeRequest', 'DislikeRequest', 'UUIDMixin', 'ViewProgressDto', 'ViewProgressRequest')
